# ocr-rs

./: Cargo.toml  README.md
.cursor/rules/: common.mdc
src/: app.rs  main.rs  ocr.rs  ui.rs
