[package]
name = "ocr-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ocr-rs"
path = "src/main.rs"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
tokio = { version = "1.45.1", features = ["full"] }
rfd = "0.15.3"
image = "0.25.6"
tesseract = { version = "0.15.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"

[features]
default = []  # 默认不包含tesseract，避免系统依赖问题
tesseract = ["dep:tesseract"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
